--- a/googleAdv.html
+++ b/googleAdv.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <title>Google Advanced</title>
 </head>
 <body>
