--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/screen.css">
         <title>Search</title>
     </head>
     <body>
+        <div class="links">
+            <a href="googleAdv.html"> Advanced </a>
+            <a href="googleImg.html"> Images </a>
+        </div> 
         <form action="https://google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
