modified css for links

--- a/googleAdv.html
+++ b/googleAdv.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
     <title>Google Advanced</title>
 </head>
 <body>
     <div class="links">
-        <a href="googleImg.html"> Images </a>
         <a href="index.html"> Search </a>
+        <a href="googleImg.html"> Images </a>
     </div>
 
     <form action="https://www.google.com/search">
