--- a/googleImg.html
+++ b/googleImg.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
     <title>Google Images</title>
 </head>
 <body>
     <div class="links">
-        <a href="googleAdv.html"> Advanced </a>
         <a href="index.html"> Search </a>
+        <a href="googleAdv.html"> Advanced </a>
     </div>
     <form action="https://www.google.com/search">
         <input type="text" name="q">
         <input name="tbm" value="isch" type="hidden">
-        <input type="submit" value="YOOOOO">
+        <input type="submit" value="Images">
     </form>
 </body>
 </html>
