google image and search bar added

--- a/googleImg.html
+++ b/googleImg.html
@@ -6,14 +6,19 @@
     <title>Google Images</title>
 </head>
 <body>
+    
     <div class="links">
         <a href="index.html"> Search </a>
         <a href="googleAdv.html"> Advanced </a>
     </div>
-    <form action="https://www.google.com/search">
-        <input type="text" name="q">
-        <input name="tbm" value="isch" type="hidden">
-        <input type="submit" value="Images">
-    </form>
+
+    <div class="images">    
+        <form action="https://www.google.com/search">
+            <input type="text" name="q">
+            <input name="tbm" value="isch" type="hidden">
+            <input type="submit" value="Images">
+        </form>
+    </div>
+
 </body>
 </html>
