--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
                 <a href="googleAdv.html"> Advanced </a>
             </div>    
         </div> 
+
+        <div id="googleLogo">
+            <img id="googleSearchLogo" src="assets/images/googlelogo.png" class="img-fluid" alt="Google Logo">
+        </div>
         
         
         <div class="googleSearch">
             <form action="https://google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky" name="btnI">
+                <div class="window">    
+                    <input id="text" type="text" name="q">
+                </div>    
+                <div class="buttons">    
+                    <input type="submit" value="Google Search">
+                    <input type="submit" value="I'm Feeling Lucky" name="btnI">
+                </div>    
             </form>
         </div>
 
