new icons and new css

--- a/googleAdv.html
+++ b/googleAdv.html
@@ -3,10 +3,11 @@
 <head>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
+    <link rel="icon" href="assets/images/icon.png">
     <title>Google Advanced</title>
 </head>
 <body>
-    <div class="links">
+    <div class="pages">
         <a href="index.html"> Search </a>
         <a href="googleImg.html"> Images </a>
     </div>
