--- a/googleImg.html
+++ b/googleImg.html
@@ -3,11 +3,12 @@
 <head>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/screen.css">
+    <link rel="icon" href="assets/images/icon.png">
     <title>Google Images</title>
 </head>
 <body>
     
-    <div class="links">
+    <div class="pages">
         <a href="index.html"> Search </a>
         <a href="googleAdv.html"> Advanced </a>
     </div>
