--- a/googleImg.html
+++ b/googleImg.html
@@ -22,7 +22,7 @@
                 <h4>images</h4>
             </div>
                 
-            <form action="https://google.com/search">
+            <form class="mainForm" action="https://google.com/search">
                 <div class="I-searchBar">                        
                     <img id="I-search" src="assets/images/search-black.svg" alt="search icon">
                     <input id="I-text" type="text" name="q">
