--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <title>Google</title>
     </head>
     <body>
-        
         <section class="section-1">
             <div class="pages">
                 <a href="googleImg.html"> Images </a>
@@ -20,7 +19,7 @@
                 <img id="S-Logo" src="assets/images/googlelogo.png" alt="Google Logo">
             </div>
                 
-            <form action="https://google.com/search">
+            <form class="mainForm" action="https://google.com/search">
                 <div class="S-searchBar">                        
                     <img id="S-search" src="assets/images/search-black.svg" alt="search icon">   
                     <input id="S-text" type="text" name="q">
